--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,9 @@ set(AIGER_INCLUDE_DIR "/Users/khyber/Documents/aiger-lib/aiger/include")
 set(AIGER_LIB_DIR "/Users/khyber/Documents/aiger-lib/aiger/lib")
 
 add_executable(my_solver main.cpp
-        aig.h)
+        aig.h
+        Solver.h
+        Solver.cpp)
 
 # Add Aiger headers
 target_include_directories(my_solver PRIVATE ${AIGER_INCLUDE_DIR})
